--- a/index.htm
+++ b/index.htm
@@ -2,23 +2,154 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" /> 
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts -->
+    <!--css da biblioteca de animação-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- css -->
-    <link rel="stylesheet" href="./src/sass/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
+
+    <!--js da biblioteca de animação-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <title>Barber</title>
 </head>
 
 <body>
+    <div class="bg_home">
+        <header>
+            <nav class="header_content container">
+                <div class="header_icons" data-aos="fade-down">
+                    <a href="#">
+                        <i class="fa-brands fa-instagram fa-2x"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-tiktok fa-2x"></i>
+                    </a>
+                </div>
+                <div class="header_logo" data-aos="fade-up" data-aos-delay="300">
+                    <img data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500" src="/src/img/logo.svg" alt="Logo">
+                </div>
 
+                <div data-aos="fade-down">
+                    <a class="header_button"
+                        href="https://api.whatsapp.com/send/?phone=558494706578&text=Quero%20fazer%20meu%20agendamento%20hoje!">Agendar
+                        horário</a>
+                </div>
+
+            </nav>
+
+            <main class="hero container" data-aos="flip-up" data-aos-delay="400">
+                <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
+                <p>Horário de funcionamento: 09:00 ás 19:00</p>
+                <a href="https://api.whatsapp.com/send/?phone=558494706578&text=Quero%20fazer%20meu%20agendamento%20hoje!"
+                    class="button_contact" target="_blank">Agendar hórario</a>
+            </main>
+        </header>
+
+    </div>
+
+    <section class="about">
+        <div class="container about_content">
+            <div data-aos="zoom-in" data-aos-delay="100">
+                <img src="/src/img/images.svg" alt="Imagem sobre a barbearia">
+            </div>
+            <div class="about_description" data-aos="zoom-out-left" data-aos-delay="250">
+                <h2>Sobre</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt velit exercitationem ab odit sed,
+                    harum, ad mollitia deleniti perferendis animi recusandae fuga necessitatibus voluptate voluptatem?
+                    Voluptas libero culpa maiores autem.</p>
+                <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="services_content container">
+            <h2>Serviços</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore rerum delectus nam, voluptatibus
+                provident vitae debitis suscipit possimus accusamus ipsum doloremque non distinctio, odit, vero
+                praesentium molestiae atque earum quia!</p>
+        </div>
+
+        <section class="haircuts">
+            <div class="haircut" data-aos="fade-up" data-aos-delay="150">
+                <img src="/src/img/corte1.png" alt="Corte normal">
+                <div class="haircut_info">
+                    <strong>Corte normal</strong>
+                    <button>0R$ 45,00</button>
+                </div>
+            </div>
+            <div class="haircut" data-aos="fade-up" data-aos-delay="450">
+                <img src="/src/img/corte2.png" alt="Barba completa">
+                <div class="haircut_info">
+                    <strong>Barba completa</strong>
+                    <button>R$ 35,00</button>
+                </div>
+            </div>
+            <div class="haircut" data-aos="fade-up" data-aos-delay="600">
+                <img src="/src/img/corte3.png" alt="Corte e barba">
+                <div class="haircut_info">
+                    <strong>Corte e barba</strong>
+                    <button>R$ 85,00</button>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <div class="services">
+        <h2>Venha Conhecer</h2>
+    </div>
+
+    <iframe width="100%"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.49098793634!2d-35.425066572174856!3d-5.641862534035259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b395675bc48ff1%3A0x2e94c1173cbe4a16!2sGold%20Barbers%20Cear%C3%A1%20Mirim!5e0!3m2!1spt-BR!2sbr!4v1704248661184!5m2!1spt-BR!2sbr"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <footer class="footer">
+        <div class="footer_icons">
+            <a href="#">
+                <i class="fa-brands fa-instagram fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-facebook fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-tiktok fa-2x"></i>
+            </a>
+        </div>
+
+        <div>
+            <img src="/src/img/logo.svg" alt="Logo">
+        </div>
+
+        <p>Copyright© 2023 | Dev Barbearia - Todos os direitos reservados.</p>
+    </footer>
+
+    <a href="https://api.whatsapp.com/send/?phone=558494706578&text=Quero%20fazer%20meu%20agendamento%20hoje!"
+        class="btn_wpp" target="_blank"
+        data-aos="zoom-in-up" data-aos-delay="400">
+        <img src="/src/img/whatssapp.svg" alt="Botão whatssapp">
+        <span class="tooltip_text">Agende seu horário</span>
+    </a>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
