--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- css -->
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <!--js da biblioteca de animação-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="header_logo" data-aos="fade-up" data-aos-delay="300">
-                    <img data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500" src="/src/img/logo.svg" alt="Logo">
+                    <img data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500" src="/img/logo.svg" alt="Logo">
                 </div>
 
                 <div data-aos="fade-down">
@@ -68,7 +68,7 @@
     <section class="about">
         <div class="container about_content">
             <div data-aos="zoom-in" data-aos-delay="100">
-                <img src="/src/img/images.svg" alt="Imagem sobre a barbearia">
+                <img src="/img/images.svg" alt="Imagem sobre a barbearia">
             </div>
             <div class="about_description" data-aos="zoom-out-left" data-aos-delay="250">
                 <h2>Sobre</h2>
@@ -90,21 +90,21 @@
 
         <section class="haircuts">
             <div class="haircut" data-aos="fade-up" data-aos-delay="150">
-                <img src="/src/img/corte1.png" alt="Corte normal">
+                <img src="/img/corte1.png" alt="Corte normal">
                 <div class="haircut_info">
                     <strong>Corte normal</strong>
                     <button>0R$ 45,00</button>
                 </div>
             </div>
             <div class="haircut" data-aos="fade-up" data-aos-delay="450">
-                <img src="/src/img/corte2.png" alt="Barba completa">
+                <img src="/img/corte2.png" alt="Barba completa">
                 <div class="haircut_info">
                     <strong>Barba completa</strong>
                     <button>R$ 35,00</button>
                 </div>
             </div>
             <div class="haircut" data-aos="fade-up" data-aos-delay="600">
-                <img src="/src/img/corte3.png" alt="Corte e barba">
+                <img src="/img/corte3.png" alt="Corte e barba">
                 <div class="haircut_info">
                     <strong>Corte e barba</strong>
                     <button>R$ 85,00</button>
@@ -136,7 +136,7 @@
         </div>
 
         <div>
-            <img src="/src/img/logo.svg" alt="Logo">
+            <img src="/img/logo.svg" alt="Logo">
         </div>
 
         <p>Copyright© 2023 | Dev Barbearia - Todos os direitos reservados.</p>
@@ -145,7 +145,7 @@
     <a href="https://api.whatsapp.com/send/?phone=558494706578&text=Quero%20fazer%20meu%20agendamento%20hoje!"
         class="btn_wpp" target="_blank"
         data-aos="zoom-in-up" data-aos-delay="400">
-        <img src="/src/img/whatssapp.svg" alt="Botão whatssapp">
+        <img src="/img/whatssapp.svg" alt="Botão whatssapp">
         <span class="tooltip_text">Agende seu horário</span>
     </a>
 
